--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile": "sass --watch --no-source-map style.scss style.css"
-    
+    "compile": "sass --watch --no-source-map scss/main.scss css/main.css"
   },
   "keywords": [],
   "author": "",
